--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     padding: 0;
 }
 
+html {
+    font-family: 'Roboto', sans-serif;
+}
+
 .container {
     position: relative;
     width: 1140px;
@@ -40,8 +44,7 @@ h1 {
 
 .title {
     color: #F9BF3B;
-    font-family: 'Roboto - Black';
-    font-weight: 400;
+    font-weight: 900;
     font-size: 41px;
     line-height: 24px;
     text-transform: uppercase;
@@ -55,8 +58,7 @@ h2 .title {
 
 .simple .title_big {
     color: #FFFFFF;
-    font-family: 'Roboto - Black';
-    font-weight: 400;
+    font-weight: 900;
     font-size: 80px;
     text-transform: uppercase;
     text-align: center;
@@ -67,7 +69,6 @@ h2 .title {
     padding: 0 13px;
     margin-top: 23px;
     color: #FFFFFF;
-    font-family: 'Roboto Light';
     font-weight: 300;
     font-size: 21px;
     line-height: 28px;
@@ -77,8 +78,7 @@ h2 .title {
 
 .promo .promo_text span {
     color: #F9BF3B;
-    font-family: 'ROboto - Bold';
-    font-weight: 700px;
+    font-weight: 700;
 }
 
 .promo .promo_btn {
@@ -90,7 +90,6 @@ h2 .title {
     background-image: linear-gradient(to top, #2798B9 0%, #3AB6DA 100%);
     box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.18);
     border: 4px solid rgba(0, 0, 0, 0.23);
-    font-family: 'Roboto Condensed';
     font-size: 21px;
     line-height: 24px;
     font-weight: 400;
@@ -129,7 +128,6 @@ h2 .title {
 .waiting .waiting_header,
 .finish .finish_header {
     color: #252525;
-    font-family: 'Roboto';
     font-weight: 400;
     font-size: 30px;
     text-transform: uppercase;
@@ -151,7 +149,6 @@ h2 .title {
 
 .waiting .waiting_subheader {
     color: #4A4A4A;
-    font-family: 'Roboto';
     font-weight: 400;
     font-size: 23px;
     text-align: center;
@@ -177,7 +174,6 @@ h2 .title {
 .waiting .waiting_wrapper .waiting_descr {
     margin-top: 33px;
     color: #4A4A4A;
-    font-family: Roboto;
     font-size: 15px;
     font-weight: 300;
 }
@@ -190,9 +186,8 @@ h2 .title {
 .optimization .optimization_header {
     margin-left: 391px;
     color: #299cbd;
-    font-family: "Roboto - Black";
     font-size: 30px;
-    font-weight: 400;
+    font-weight: 900;
     text-transform: uppercase;
 }
 
@@ -203,12 +198,10 @@ h2 .title {
     font-size: 17px;
     font-weight: 300;
     font-weight: 27px;
-    font-family: "Roboto Light";
     font-weight: 300;
 }
 
 .optimization .optimization_text span {
-    font-family: "Roboto - Bold";
     font-weight: 700;
 }
 
@@ -247,7 +240,6 @@ h2 .title {
 }
 
 .finish .finish_wrapper .finish_item .finish_descr {
-    font-family: 'Roboto';
     margin-top: 25px;
     text-align: center;
     color: #EFEFEF;
@@ -275,7 +267,6 @@ h2 .title {
     font-weight: 400;
     font-size: 30px;
     line-height: 43px;
-    font-family: 'Roboto';
     margin-top: 45px;
 }
 
@@ -295,7 +286,7 @@ h2 .title {
     text-align: center;
     text-transform: uppercase;
     display: flex;
-    font-family: 'RobotoCondensed';
+    font-family: 'Roboto Condensed';
     font-size: 21px;
     line-height: 24px;
     cursor: pointer;
@@ -312,7 +303,6 @@ h2 .title {
 }
 
 .last .last_vebinar {
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
@@ -324,7 +314,6 @@ h2 .title {
 }
 
 .last .last_dateTime {
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 900;
     font-size: 36px;
@@ -336,7 +325,6 @@ h2 .title {
 }
 
 .last .last_text {
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 23px;
@@ -358,7 +346,6 @@ footer {
     width: 377px;
     text-align: center;
     color: #888888;
-    font-family: Roboto;
     font-size: 15px;
     font-weight: 300;
     line-height: 21px;
@@ -366,7 +353,6 @@ footer {
 
 footer a {
     color: #888888;
-    font-family: Roboto;
     font-size: 15px;
     font-weight: 300;
     line-height: 21px;
