--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ h2 .title {
     border: 4px solid rgba(0, 0, 0, 0.23);
     font-size: 21px;
     line-height: 24px;
+    font-family: 'Roboto Condensed';
     font-weight: 400;
     text-transform: uppercase;
     color: #FFFFFF;
